# amline-platform

./: .editorconfig  .env.deploy.example  .env.example  .env.production.example  .env.staging.example  .gitattributes  .gitignore  .sweep.yaml  API_DOCS.md  BOOTSTRAP.md  CHANGELOG.md  CODEX-SETUP.md  CONTRIBUTING.md  CURSOR-DUAL-ACCOUNT-SETUP.md  DEPLOY.md  DEPLOY_INSTRUCTIONS.md  DESIGN.md  DOCUMENTATION.md  LICENSE  PROJECT_COMPLETE_SUMMARY.md  PROJECT_ONBOARDING_REPORT.md  README.md  REPOSITORY_STRUCTURE.md  SECURITY.md  check_server.py  dash_snap.json  deploy-remote.sh  deploy-seo-amline.ps1  deploy.sh  deploy_amline.py  deploy_manual_commands.sh  docker-compose.yml  eslint.config.js  install-and-run-codex.ps1  jest.config.js  main.py  metabase_client.py  metabase_setup_dashboards.py  package.json  production_tables.json  (+8 more)
.github/: CODEOWNERS  PULL_REQUEST_TEMPLATE.md  mergify.yml
admin-ui/: .env.development  .env.e2e  .env.example  .env.production  .env.production.example  .eslintrc.cjs  Dockerfile  index.html  nginx.conf  package.json  playwright.config.ts  playwright.staging.config.ts  tailwind.config.js  vite.config.ts  vitest.config.ts
agents/: __init__.py  coding_agent.py  config.py  executor_agent.py  llm_client.py  main_orchestrator.py  planning_agent.py  pr_agent.py  review_agent.py  run_agent.py  testing_agent.py
ai-video-directory/: SPEC.md
ai_config/: crew_config.yaml  (+2 more)
pdf-generator/: Dockerfile  pyproject.toml  requirements.txt
pdf-generator/src/: __init__.py  main.py
pdf-generator/src/services/: __init__.py  minio_service.py  pdf_generator.py
(+1130 files in other folders)
