[tool.poetry]
name = "amline-pdf-generator"
version = "1.0.0"
description = "PDF Generator Service for Amline Platform"
authors = ["Amline Team"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
fastapi = "^0.115.0"
uvicorn = "^0.32.0"
weasyprint = "^62.3"
jinja2 = "^3.1.4"
python-multipart = "^0.0.12"
minio = "^7.2.1"
pydantic = "^2.9.0"
pydantic-settings = "^2.5.0"
loguru = "^0.7.2"
httpx = "^0.27.0"
persian-date = "^0.1.6"
num2words = "^0.5.14"

[tool.poetry.group.dev.dependencies]
pytest = "^8.3.0"
pytest-asyncio = "^0.24.0"
httpx = "^0.27.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.poetry.scripts]
pdf-generator = "main:app"
